# docs

./: .gitignore  Makefile  README.md  pyproject.toml  zensical.toml
docs/: index.md
