[project]
name = "417-tech-docs-public"
version = "0.1.0"
description = "Public documentation for 417 Tech"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"zensical>=0.0.36",
]

[dependency-groups]
dev = [
	"mdformat>=1.0.0",
	"mdformat-admon>=2.1.1",
	"mdformat-beautysh>=1.0.0",
	"mdformat-frontmatter>=2.0.10",
	"mdformat-pyproject>=0.1.1",
	"mdformat-ruff>=0.1.3",
	"mdformat-simple-breaks>=0.1.0",
	"mdformat-web>=0.2.0",
]

[tool.mdformat]
wrap = "keep"
number = true
end_of_line = "lf"
validate = true
